--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "link-tracker-shopify",
+  "name": "link-tracker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "check-links.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node check-links.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "node-fetch": "^2.6.9",
+    "nodemailer": "^6.9.4"
   }
 }
