--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,16 @@ jobs:
 
       - name: ✏️ Inject version in theme.liquid
         run: |
-          sed -i 's|release: .*|release: "${{ env.VERSION }}"|g' sections/theme.liquid || true
-          sed -i 's|release: .*|release: "${{ env.VERSION }}"|g' layout/theme.liquid || true
-          sed -i 's|<meta name="sentry-release" content="shop-theme-v.*">|<meta name="sentry-release" content="shop-theme-${{ env.VERSION }}">|' layout/theme.liquid || true
+          sed -i "s|release: .*|release: \\\"${{ env.VERSION }}\\\"|g" sections/theme.liquid || true
+          sed -i "s|release: .*|release: \\\"${{ env.VERSION }}\\\"|g" layout/theme.liquid || true
+          sed -i "s|<meta name=\"sentry-release\" content=\"shop-theme-v.*\">|<meta name=\"sentry-release\" content=\"shop-theme-${{ env.VERSION }}\">|" layout/theme.liquid || true
 
       - name: 📤 Commit & Push version bump
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "🔁 Auto version bump ${{ env.VERSION }}"
+          git commit -m "🔁 Auto version bump ${{ env.VERSION }}" || echo "Nothing to commit"
           git push
 
       - name: 🚨 Create Sentry Release
