--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,25 +12,24 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 📝 Récupération du numéro de version automatique
+      - name: 📝 Génération automatique de version
         id: version
         run: |
           VERSION="v$(date +'%Y.%m.%d').${{ github.run_number }}"
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
 
-      - name: ✏️ Inject version in theme.liquid et layout
+      - name: ✏️ Injection version dans theme.liquid et layout
         run: |
           sed -i 's|release: .*|release: "${{ env.VERSION }}"|g' sections/theme.liquid || true
           sed -i 's|release: .*|release: "${{ env.VERSION }}"|g' layout/theme.liquid || true
           sed -i 's|<meta name="sentry-release" content="shop-theme-v.*">|<meta name="sentry-release" content="shop-theme-${{ env.VERSION }}">|g' layout/theme.liquid || true
-          sed -i 's|Sentry.setTag("release_tag", "shop-theme-v.*");|Sentry.setTag("release_tag", "shop-theme-${{ env.VERSION }}");|g' layout/theme.liquid || true
 
       - name: 📤 Commit & Push version bump
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
           git add .
-          git commit -m "🔁 Auto version bump ${{ env.VERSION }}" || echo "✅ Nothing to commit"
+          git diff --cached --quiet || git commit -m "🔁 Auto version bump ${{ env.VERSION }}"
           git push
 
       - name: 🚨 Create Sentry Release
