--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "🔁 Auto version bump ${{ env.VERSION }}"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/Stardust75001/link-tracker-shopify.git
 
       - name: 🚨 Create Sentry Release
         uses: getsentry/action-release@v1
