--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -25,14 +28,12 @@ jobs:
           sed -i 's|<meta name="sentry-release" content="shop-theme-v.*">|<meta name="sentry-release" content="shop-theme-${{ env.VERSION }}">|g' layout/theme.liquid || true
 
       - name: 📤 Commit & Push version bump
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "🔁 Auto version bump ${{ env.VERSION }}"
-          git push https://x-access-token:${GH_PAT}@github.com/Stardust75001/link-tracker-shopify.git
+          git push
 
       - name: 🚨 Create Sentry Release
         uses: getsentry/action-release@v1
