--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [main]
 
-permissions:
-  contents: write
-
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -29,18 +26,18 @@ jobs:
 
       - name: 📤 Commit & Push version bump
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "🔁 Auto version bump ${{ env.VERSION }}"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/Stardust75001/link-tracker-shopify.git
 
       - name: 🚨 Create Sentry Release
         uses: getsentry/action-release@v1
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: thepetsociety
-          SENTRY_PROJECT: shopify-frontend
+          SENTRY_ORG: falcon-trading-ep
+          SENTRY_PROJECT: other
         with:
           environment: production
           version: ${{ env.VERSION }}
