--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⏬ Checkout repo
+      - name: ⏬ Checkout repo with PAT
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}  # Important pour autoriser le commit + push
 
       - name: 📝 Génération automatique de version
         id: version
@@ -30,7 +32,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "🔁 Auto version bump ${{ env.VERSION }}"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/Stardust75001/link-tracker-shopify.git
+          git push
 
       - name: 🚨 Create Sentry Release
         uses: getsentry/action-release@v1
