--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_PAT }} # Utilise le PAT pour autoriser git push
+          token: ${{ secrets.GH_PAT }}
 
       - name: 📝 Génération automatique de version
         id: version
@@ -43,3 +43,21 @@ jobs:
         with:
           environment: production
           version: ${{ env.VERSION }}
+
+      - name: 📌 Create Git tag
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git tag -a ${{ env.VERSION }} -m "🔖 Release ${{ env.VERSION }}"
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} --tags
+
+      - name: 📦 Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ env.VERSION }}
+          name: 🔖 Release ${{ env.VERSION }}
+          body: |
+            ✅ Version auto-générée : `shop-theme-${{ env.VERSION }}`
+            🛠️ Modifications : _(voir les derniers commits ou changelog)_
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
